--- a/Learn2/appsettings.json
+++ b/Learn2/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RedisUrl": "127.0.0.1:6379",
+  "JWT": {
+    "ValidAudience": "http://localhost:7042",
+    "ValidIssuer": "http://localhost:7042",
+    "Secret": "JWTAuthentication@788"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SQL5063.site4now.net;Initial Catalog=db_a9219e_shop;User Id=db_a9219e_shop_admin;Password=LF721)$lrF9]_"
+  }
 }
